--- a/estante/templates/base.html
+++ b/estante/templates/base.html
@@ -21,9 +21,15 @@
 <header>
     <div class="ui left vertical inverted thin sidebar menu visible" style="background-color: #120a18">
         <div class="item" id="logo_menu">
-            <a class="ui logo icon image" href="/">
-                <img src="{% static 'iconelivro.png' %}">
-            </a>
+            {% if user.is_authenticated %}
+                <a class="ui logo icon image" href="{% url 'estante:perfil' %}">
+                    <img src="{% static 'iconelivro.png' %}">
+                </a>
+            {% else %}
+                <a class="ui logo icon image" href="/">
+                    <img src="{% static 'iconelivro.png' %}">
+                </a>
+            {% endif %}
             <br/><br/>
         </div>
         {% if user.is_authenticated %}
