--- a/estante/templates/perfil.html
+++ b/estante/templates/perfil.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <h1>
-        {% trans Perfil %}
+        {% trans "Perfil" %}
     </h1>
 
     <section class="ui container">
